Different sentinel image

--- a/sections/sentinels.tex
+++ b/sections/sentinels.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Cooperative scenario}{Sentinels}{\images/frenzy.png}
+\addscenariosection{1}{Cooperative scenario}{Sentinels}{\images/sentinel.png}
 
 \begin{multicols*}{2}
 
