--- a/sections/sentinels.tex
+++ b/sections/sentinels.tex
@@ -3,6 +3,10 @@
 
 \begin{multicols*}{2}
 
+\textbf{Author:} silence70011
+
+\textbf{Source:} \href{https://discord.com/channels/740870068178649108/1233112440322002964/1233112440322002964}{Archon Studio Discord}
+
 \subsection*{\MakeUppercase{Scenario length}}
 
 This scenario plays out over 12 rounds.
@@ -21,9 +25,7 @@ This scenario plays out over 12 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
-\textbf{Map Tile Pool:} 
-    Each player takes 1 random Near Map Tile (IV-V) and 1 random Far Map Tile (II-III)
-    that can be placed during the game.
+\textbf{Map Tile Pool:} Each player takes 1 random Near Map Tile (IV-V) and 1 random Far Map Tile (II-III).
 
 \textbf{Bonus:} Search (2) the Artifact Deck 
 
@@ -33,7 +35,7 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 
 \textbf{2 × Starting Map tile (I)}
 \begin{itemize}
-    \item Pick Starting Tiles of your chosen factions.
+    \item Starting Tiles of your chosen factions.
     \item Ignore their yellow borders.
 \end{itemize}
 
@@ -174,10 +176,6 @@ devastation of these lands.
   \end{tabularx}
 }
 
-\subsection*{\MakeUppercase{Credits}}
-
-\textbf{Author:} silence70011
-
-\textbf{Source:} \href{https://discord.com/channels/740870068178649108/1233112440322002964}{Community Maps in Archon Studio Discord}
+\center\includegraphics[width=0.6\paperwidth]{\_assets/maps/sentinels.png}
 
 \footnotetext[1]{Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is random\label{azure}.}
