--- a/sections/sentinels.tex
+++ b/sections/sentinels.tex
@@ -176,6 +176,8 @@ devastation of these lands.
   \end{tabularx}
 }
 
+\vspace{3em}
+
 \center\includegraphics[width=0.6\paperwidth]{\_assets/maps/sentinels.png}
 
 \footnotetext[1]{Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is random\label{azure}.}
