Review comments + different and smaller sentinel image

--- a/sections/sentinels.tex
+++ b/sections/sentinels.tex
@@ -137,7 +137,7 @@ devastation of these lands.
     a total of 4 units (e.i. there are always 4 or 5 enemy units on the board after reinforcing, if available).}
     \item Place the reinforcing units on the enemy base line starting from the left with the lowest initiative
     (\svg{unit_ranged} units first). If necessary continue on the next line (in the same order).
-    \item When a player retreats the enemy army draws up to the "minimum" of 4 units and takes these
+    \item When a player retreats the enemy army draws up to the ``minimum'' of 4 units and takes these
     as starting units to the next fight. 
 \end{itemize}
 
