Fix center overflowing to other pages

--- a/sections/sentinels.tex
+++ b/sections/sentinels.tex
@@ -178,6 +178,8 @@ devastation of these lands.
 
 \vspace{3em}
 
-\center\includegraphics[width=0.6\paperwidth]{\_assets/maps/sentinels.png}
+\begin{center}
+  \includegraphics[width=0.6\paperwidth]{\_assets/maps/sentinels.png}
+\end{center}
 
 \footnotetext[1]{Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is random\label{azure}.}
