--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -7,11 +7,11 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1233112440322002964/1233112440322002964}{Archon Studio Discord}
 
-\subsubsection*{\MakeUppercase{Scenario length}}
+\subsection*{\MakeUppercase{Scenario length}}
 
 This scenario plays out over 12 rounds.
 
-\subsubsection*{\MakeUppercase{Player setup}}
+\subsection*{\MakeUppercase{Player setup}}
 
 \textbf{Player count:} 2
 
@@ -29,7 +29,7 @@ This scenario plays out over 12 rounds.
 
 \textbf{Bonus:} Search (2) the Artifact Deck 
 
-\subsubsection*{\MakeUppercase{Map setup}}
+\subsection*{\MakeUppercase{Map setup}}
 
 Take the following Map tiles and set them up as shown in the scenario map layout:
 
@@ -46,7 +46,7 @@ Take the following Map tiles and set them up as shown in the scenario map layout
     \item All Near Map tiles must have obelisks.
 \end{itemize}
 
-\subsubsection*{\MakeUppercase{Additional rules}}
+\subsection*{\MakeUppercase{Additional rules}}
 
 \begin{itemize}
     \item Players can trade resources when the one of the active player's heroes 
@@ -55,7 +55,7 @@ Take the following Map tiles and set them up as shown in the scenario map layout
     The winning player throws two Treasure Dice and chooses one.
 \end{itemize}
 
-\subsubsection*{\MakeUppercase{Win/lose conditions}}
+\subsection*{\MakeUppercase{Win/lose conditions}}
 
 \textbf{Win:}
 \begin{itemize}
@@ -69,7 +69,7 @@ Take the following Map tiles and set them up as shown in the scenario map layout
     (retreat doesn't count).
 \end{itemize}
 
-\subsubsection*{\MakeUppercase{Timed events}}
+\subsection*{\MakeUppercase{Timed events}}
 
 \textbf{6$^{th}$ and 9$^{th}$ Round:}
 \begin{itemize}
@@ -81,7 +81,7 @@ Take the following Map tiles and set them up as shown in the scenario map layout
     \item Spawn an enemy army according to the rules below.
 \end{itemize}
 
-\subsubsection*{\MakeUppercase{The story}}
+\subsection*{\MakeUppercase{The story}}
 
 There is a world beyond this world and it is filled with beasts and monsters, 
 barely held captive by a formation of four sacred obelisks.
@@ -95,7 +95,7 @@ devastation of these lands.
 
 \newpage
 
-\subsubsection*{\MakeUppercase{Enemy spawning and movement}}
+\subsection*{\MakeUppercase{Enemy spawning and movement}}
 
 \begin{itemize}
     \item Enemy armies spawn on a random obelisk field (use hero miniatures of factions not in play).
@@ -115,7 +115,7 @@ devastation of these lands.
     \item If an enemy's movement could go two different ways the players decide which way to go.
 \end{itemize}
 
-\subsubsection*{\MakeUppercase{Combat with enemy armies}}
+\subsection*{\MakeUppercase{Combat with enemy armies}}
 
 \begin{itemize}
     \item During a battle with an enemy army a hero can retreat every time a friendly unit is about to 
@@ -125,7 +125,7 @@ devastation of these lands.
     \item Killed enemy units do not respawn. 
 \end{itemize}
 
-\subsubsection*{\MakeUppercase{Boss army}}
+\subsection*{\MakeUppercase{Boss army}}
 
 \begin{itemize}
     \item On Round 10 a Boss Army spawns and is different from previous armies, because it gets reinforced 
