--- a/main_en.tex
+++ b/main_en.tex
@@ -13,19 +13,11 @@
 
 \newcommand{\intro}{
   This is a community-driven project, which has a \href{\repourl}{GitHub repository}.
-  Everyone is welcome to contribute, make changes, and fix errors.
-  If you simply want to leave feedback, please do so in the original \href{\bggthreadurl}{BoardGameGeek thread}.
+  Everyone is welcome to contribute scenarios, make changes, and fix errors.
 }
 \newcommand{\pageshorthand}{p.}
 
-\newcommand{\authorsquote}{
-  \textit{It is what it is.}
-  \\
-  {\small — qwrtln}
-}
-
 \newcommand{\qrgithub}{Scan to open \textbf{GitHub} repository.}
-\newcommand{\qrbgg}{Scan to open \textbf{BoardGameGeek} thread.}
 
 \title{\includegraphics[width=6cm]{\images/title.png}\\Fan-Made Mission Book}
 
