--- a/metadata.tex
+++ b/metadata.tex
@@ -371,7 +371,7 @@
 
   \bigbreak
 
-  \includesvg[width=0.4\linewidth]{\qr/github.svg}\\
+  \includesvg[height=15em]{\qr/github.svg} \\
   \qrgithub
 \end{center}
 
