--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -7,52 +7,57 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1233112440322002964/1233112440322002964}{Archon Studio Discord}
 
+\subsection*{\MakeUppercase{The Story}}
+
+There is a world beyond this world, and it is filled with beasts and monsters, barely held captive by a formation of four sacred obelisks.
+But the protection of the stones is weakening, and a breach is imminent.
+When it happens, only you and your ally stand between the hordes and the total devastation of these lands.
+
 \subsection*{\MakeUppercase{Scenario length}}
 
-This scenario plays out over 12 rounds.
+This scenario lasts for 12 rounds.
 
-\subsection*{\MakeUppercase{Player setup}}
+\subsection*{\MakeUppercase{Player Setup}}
 
-\textbf{Player count:} 2
+\textbf{Player Count:} 2
 
 \textbf{Starting Resources:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
-\textbf{Starting Units:} 
-    A Pack of \svg{bronze} units with the \textit{lowest} recruitment cost. 
-    A Few \svg{bronze} units with the \textit{highest} recruitment cost 
+\textbf{Starting Units:}
+- A pack of \svg{bronze} units with the \textit{lowest} recruitment cost.
+- A few \svg{bronze} units with the \textit{highest} recruitment cost.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
 \textbf{Map Tile Pool:} Each player takes 1 random Near Map Tile (IV-V) and 1 random Far Map Tile (II-III).
 
-\textbf{Bonus:} Search (2) the Artifact Deck 
+\textbf{Bonus:} Search (2) the Artifact Deck
 
-\subsection*{\MakeUppercase{Map setup}}
+\subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map tiles and set them up as shown in the scenario map layout:
+Take the following map tiles and set them up as shown in the scenario map layout:
 
-\textbf{2 × Starting Map tile (I)}
+\textbf{2 × Starting Map Tile (I)}
 \begin{itemize}
     \item Starting Tiles of your chosen factions.
     \item Ignore their yellow borders.
 \end{itemize}
 
-\textbf{4 × Far Map tile (II-III)}
+\textbf{4 × Far Map Tile (II-III)}
 
-\textbf{4 × Near Map tile (IV-V)}
+\textbf{4 × Near Map Tile (IV-V)}
 \begin{itemize}
-    \item All Near Map tiles must have obelisks.
+    \item All Near Map tiles must have Obelisks.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional rules}}
 
 \begin{itemize}
-    \item Players can trade resources when the one of the active player's heroes 
-    visits a trading post or stands on a field adjacent to an allied hero.
+    \item Players can trade resources when one of the active player's heroes visits a trading post or stands on a field adjacent to an allied hero.
     \item The hero who defeats an enemy army gains 2 \svg{experience}.
-    The winning player throws two Treasure Dice and chooses one.
+      The winning player rolls two Treasure Dice and resolves one of them.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Win/lose conditions}}
@@ -64,65 +69,52 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 
 \textbf{Lose:}
 \begin{itemize}
-    \item There is an undefeated enemy army left by the end of Round 12.
+    \item There is an undefeated enemy army left at the end of Round 12.
     \item One of your towns is captured or a main hero is defeated in battle 
     (retreat doesn't count).
 \end{itemize}
 
-\subsection*{\MakeUppercase{Timed events}}
+\subsection*{\MakeUppercase{Timed Events}}
 
-\textbf{6$^{th}$ and 9$^{th}$ Round:}
+\textbf{6$^{th}$ and 9$^{th}$ Rounds:}
 \begin{itemize}
-    \item Remove black cubes from windmills, water wheels and mystical gardens.
+    \item Remove black cubes from windmills, water wheels, and mystical gardens.
 \end{itemize}
 
-\textbf{6-10$^{th}$ Rounds:}
+\textbf{6$^{th}$-10$^{th}$ Rounds:}
 \begin{itemize}
     \item Spawn an enemy army according to the rules below.
 \end{itemize}
-
-\subsection*{\MakeUppercase{The story}}
-
-There is a world beyond this world and it is filled with beasts and monsters, 
-barely held captive by a formation of four sacred obelisks.
-
-But the protection of the stones is weakening and a breach is imminent.
-
-When it happens only you and your ally stand between the hordes and total 
-devastation of these lands.
 
 \end{multicols*}
 
 \newpage
 
-\subsection*{\MakeUppercase{Enemy spawning and movement}}
+\subsection*{\MakeUppercase{Enemy Spawning and Movement}}
 
 \begin{itemize}
     \item Enemy armies spawn on a random obelisk field (use hero miniatures of factions not in play).
-    \item Determine which obelisk field by rolling 2 Attack Dice
+    \item Determine which obelisk field by rolling 2 Attack Dice:
     \begin{itemize}
-        \item First die: --1 west, +1 east, 0 reroll
-        \item Second die: --1 north, +1 south, 0 reroll
+        \item First die: -1 west, +1 east, 0 reroll
+        \item Second die: -1 north, +1 south, 0 reroll
     \end{itemize}
-    \item For more equal distribution, in rounds 7 and 9 the enemy spawns on the opposite side
-    than in the round before. Rounds 8 and 10 are all random.
-    \item If the tile to spawn an enemy on isn't discovered yet, flip it over and orient as preferred.
+    \item For more equal distribution, in Rounds 7 and 9, the enemy spawns on the opposite side than in the previous round. Rounds 8 and 10 are all random.
+    \item If the tile to spawn an enemy on isn't discovered yet, flip it over and orient it as preferred.
     \item If there is a hero on the field where the enemy spawns, a fight is initiated immediately.
     \item Enemy armies move at the end of every turn, starting with the same turn they spawned.
     \item Enemy armies have 3 Movement Points per round.
-    \item Enemy armies move as described in the rulebook (p. 33) but instead of capturing they destroy
-    everything in their way. Place black cubes on any field they pass and treat them as empty from that point.
-    \item If an enemy's movement could go two different ways the players decide which way to go.
+    \item Enemy armies move as described in the rulebook (p. 33), but instead of capturing, they destroy everything in their way. Place black cubes on any field they pass and treat them as empty from that point.
+    \item If an enemy's movement could go two different ways, the players decide which way to go.
 \end{itemize}
 
-\subsection*{\MakeUppercase{Combat with enemy armies}}
+
+\subsection*{\MakeUppercase{Combat with Enemy Armies}}
 
 \begin{itemize}
-    \item During a battle with an enemy army a hero can retreat every time a friendly unit is about to 
-    activate. Retreating main hero loses all remaining Movement Points and is returned to an
-    allied town or settlement of their choice, keeping all remaining units.
-    \item Retreating secondary heroes are removed from the game, remaining units are kept. 
-    \item Killed enemy units do not respawn. 
+    \item During a battle with an enemy army, a hero can retreat every time a friendly unit is about to activate. A retreating main hero loses all remaining Movement Points and is returned to an allied town or settlement of their choice, keeping all remaining units.
+    \item Retreating secondary heroes are removed from the game, but remaining units are kept.
+    \item Killed enemy units do not respawn.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Boss army}}
