Make QR code PNG

--- a/metadata.tex
+++ b/metadata.tex
@@ -371,7 +371,7 @@
 
   \bigbreak
 
-  \includesvg[height=15em]{\qr/github.svg} \\
+  \includegraphics[width=0.4\linewidth]{\qr/github.png} \\
   \qrgithub
 \end{center}
 
