--- a/metadata.tex
+++ b/metadata.tex
@@ -95,8 +95,7 @@
 \def\tables{\_assets/tables}
 \def\qr{\_assets/qr-codes}
 
-\def\repourl{https://github.com/Heegu-sama/Homm3BG}
-\def\bggthreadurl{https://boardgamegeek.com/thread/3235221/rule-book-rewrite-project}
+\def\repourl{https://github.com/qwrtln/Homm3BG-mission-book}
 
 \newcommand{\svg}[2][]{%
   \ifthenelse{\equal{#1}{}}%
@@ -370,23 +369,11 @@
 
   \intro{}
 
-  \bigbreak\authorsquote
-\end{center}
-
-\iftoggle{printable}{
   \bigbreak
 
-  \begin{multicols}{2}
-  \centering
-  \includegraphics[width=0.8\linewidth]{\qr/github.png}\\
+  \includegraphics[width=0.4\linewidth]{\qr/github.png} \\
   \qrgithub
-
-  \columnbreak
-
-  \includegraphics[width=0.8\linewidth]{\qr/bgg.png}\\
-  \qrbgg
-  \end{multicols}
-}{}
+\end{center}
 
 \begin{tikzpicture}[remember picture, overlay]
   \node(cover)[anchor=center, yshift=12em] at (current page.south) {
