--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -16,7 +16,7 @@
 
 \subsection*{\MakeUppercase{Scenario length}}
 
-This scenario lasts for 12 rounds.
+This scenario is played over 12 rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 
