More typos + template update

--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -7,13 +7,15 @@
 
 \textbf{Source:} ...
 
+\subsection*{\MakeUppercase{The Story}}
+
 \textit{... 1-2 two paragraphs to set the story ...}
 
-\subsection*{\MakeUppercase{Scenario length}}
+\subsection*{\MakeUppercase{Scenario Length}}
 
-This scenario plays out over ... rounds.
+This scenario is played over ... rounds.
 
-\subsection*{\MakeUppercase{Player setup}}
+\subsection*{\MakeUppercase{Player Setup}}
 
 \textbf{Player count:} ...
 
@@ -21,7 +23,13 @@ This scenario plays out over ... rounds.
 
 \textbf{Starting Income:} \svg{gold} \svg{building_materials} \svg{valuables}
 
-\textbf{Starting Units:} \svg{bronze} \svg{silver} \svg{golden} \svg{azure}
+\textbf{Starting Units:}
+\begin{itemize}
+  \item A Few \svg{bronze}...
+  \item A Pack \svg{silver}...
+  \item \svg{golden}
+  \item \svg{azure}
+\end{itemize}
 
 \textbf{Town Buildings:} ...
 
