--- a/metadata.tex
+++ b/metadata.tex
@@ -388,7 +388,5 @@
 
 \include{sections/sentinels.tex}
 
-\clearpage
-
-\include{sections/Titans stronghold.tex}
+\include{sections/Titans_stronghold.tex}
 \end{document}
