--- a/sections/Titans_stronghold.tex
+++ b/sections/Titans_stronghold.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Cooperative scenario}{Titan's stronghold}{\images/Stronghold.png}
+\addscenariosection{1}{Cooperative scenario}{Titans' stronghold}{\images/Stronghold.png}
 
 \begin{multicols*}{2}
 
@@ -9,7 +9,11 @@
 
 \subsection*{\MakeUppercase{The story}}
 
-TODO 
+A long time ago, a powerful fortress was built to house the fantastic and murderous Titans. No one has ever entered and returned to tell the tale. Now, peoples speak about death of guardians and an incredibly lot of treasures, with potentially the best bow of the world. 
+
+If this legend of the empty fort is true, it's the time for excavation.
+
+But for now, you and your friends need to find the keys spread around Antagarich to open the gate of Titans' stronghold. 
 
 \subsection*{\MakeUppercase{Scenario length}}
 
@@ -47,8 +51,6 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 
 If you don't have enough VI-VII tile you can use another for tile near to tile I.
 The center of this tile is the Titans' Stronghold.
-
-\columnbreak
 
 \subsection*{\MakeUppercase{Win conditions}}
 
