Added missing assets, general clean-up

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -12,8 +12,6 @@
 A scenario for 2 or 4 players.
 \subsection*{\MakeUppercase{Scenario Length}}
 This scenario plays out over 13 rounds.
-\subsection*{\MakeUppercase{Scenario Length}}
-This scenario plays out over 13 rounds.
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map tiles and set them up as shown in the scenario map layout:
 
@@ -38,7 +36,7 @@ Each player starts with the following resources:
 \begin{center}
     \textbf{13 ×} \svg{gold}   \textbf{2 ×}   \svg{building_materials}   \textbf{1 ×} \svg{valuables}
 \end{center}
-\subsection*{\MakeUppercase{Setting a Player's Income}}
+\subsection*{\MakeUppercase{Setting a Player's\\Income}}
 Set the income on the income tracker to:
 \begin{center}
     \textbf{“10”} \svg{gold}   \textbf{“0”}   \svg{building_materials}   \textbf{“0”} \svg{valuables}
@@ -54,7 +52,7 @@ Each player starts with the following units:
     \item 1 × A few \svg{bronze} units with the highest Recruitment cost
     \item 1 × A pack of \svg{bronze} units with the lowest Recruitment cost
 \end{itemize}
-\subsection*{\MakeUppercase{Additional Scenario Rules}}
+\subsection*{\MakeUppercase{Additional Scenario\\Rules}}
 Before this scenario:
 \begin{itemize}
     \item Split the Artifact deck by rarity into 3 separate decks (Minor, Major, and Relic). A player may gain only Minor Artifacts on Starting or Far tiles, Minor or Major Artifacts on Near tiles, and Major or Relic Artifacts on Center tiles.
@@ -62,10 +60,10 @@ Before this scenario:
 During this scenario:
 \begin{itemize}
     \item When a player Visits an Obelisk, they must resolve one of the following effects:
-    \begin{enumerate}
+    \begin{enumerate}[leftmargin=15pt]
         \item \textbf{[Cleanse]} The player receives one of the following boons, dependent on how many Obelisks they have Visited:
         \begin{enumerate}
-            \item \textbf{[1st Obelisk]} Roll 2 Treasure Dice and choose 1 to resolve; then, gain 1 Negative Morale.
+            \item \textbf{[1st Obelisk]} Roll 2 \svg{treasure} and choose 1 to resolve; then, gain \svg{morale_negative}.
             \item \textbf{[2nd Obelisk]} Increase your \svg{gold}, \svg{building_materials}, or \svg{valuables} income by 1 step.
             \item \textbf{[3rd Obelisk]} You gain a Secondary Hero. Place their model on this field. Then, choose one enemy player to discard 2 random cards from their hand.
             \item \textbf{[4th Obelisk]} Remove up to 4 cards from your hand; then, search each corresponding deck for a card of your choice, and put it in your hand.
@@ -74,29 +72,29 @@ During this scenario:
         \begin{enumerate}
             \item \svg{bronze}: Gain 6 \svg{gold}, 3 \svg{building_materials}, and 1 \svg{valuables}. Additionally, if the Unit Card was on the Pack side, \textbf{Search (4)} the Minor Artifact deck.
             \item \svg{silver}: Gain 12 \svg{gold}, 6 \svg{building_materials}, and 2 \svg{valuables}. Additionally, if the Unit Card was on the Pack side, \textbf{Search (3)} the Major Artifact deck.
-            \item \svg{gold}: Gain 18 \svg{gold}, 9 \svg{building_materials}, and 3 \svg{valuables}. Additionally, \textbf{Search (2)} the Relic card deck. Finally, if the Unit Card was on the Pack side, \textbf{Search (2)} the Azure Unit deck; you may Recruit one of these Units for half the cost (rounded down).
+            \item \svg{golden}: Gain 18 \svg{gold}, 9 \svg{building_materials}, and 3 \svg{valuables}. Additionally, \textbf{Search (2)} the Relic card deck. Finally, if the Unit Card was on the Pack side, \textbf{Search (2)} the \svg{azure} Unit deck; you may Recruit one of these Units for half the cost (rounded down).
         \end{enumerate}
     \end{enumerate}
-    \item A player that chooses \textbf{Sacrifice} at an Obelisk gains the title of “\textcolor{red}{Blood Knight}.” Place a red faction cube on their Hero portrait to mark this effect. A \textcolor{red}{Blood Knight} may never choose the \textbf{Cleanse} option when Visiting an Obelisk.
+    \item A player that chooses \textbf{Sacrifice} at an Obelisk gains the title of “\textcolor{darkcandyapplered}{Blood Knight}.” Place a red faction cube on their Hero portrait to mark this effect. A \textcolor{darkcandyapplered}{Blood Knight} may never choose the \textbf{Cleanse} option when Visiting an Obelisk.
     \item A player that chooses \textbf{Cleanse} at an Obelisk gains the title of “\textcolor{cyan}{Grail Knight}.” Place a blue faction cube on their Hero portrait to mark this effect. A \textcolor{cyan}{Grail Knight} may never choose the \textbf{Sacrifice} option when Visiting an Obelisk.
     \item When a player chooses \textbf{Sacrifice} at an Obelisk, place a number of faction cubes on the sacrificed Unit card and on the Obelisk field equivalent to the number of times the player has chosen the \textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 faction cubes on the Unit card and 2 faction cubes on the Obelisk field.
     \item A player who possesses the title of “A \textcolor{cyan}{Grail Knight}” may, after Visiting an Obelisk, recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to recruit Few instead.
     \item If a Unit recruited at an Obelisk is defeated, Remove it.
-    \item A player who possesses no title or the title of “\textcolor{red}{Blood Knight}” may not use the Diplomacy Ability card. If a player who possesses no title or the title of “\textcolor{red}{Blood Knight}” draws the Diplomacy Ability card, they may show it to the other players, then discard it and draw a new Ability card in its stead.
+    \item A player who possesses no title or the title of “\textcolor{darkcandyapplered}{Blood Knight}” may not use the Diplomacy Ability card. If a player who possesses no title or the title of “\textcolor{darkcandyapplered}{Blood Knight}” draws the Diplomacy Ability card, they may show it to the other players, then discard it and draw a new Ability card in its stead.
     \item A player who possesses the title of “\textcolor{cyan}{Grail Knight}” may not use the Diplomacy Ability card to Recruit Neutral Azure Units.
     \item Whenever an Astrologers Proclaim or Event card that allows you to Recruit Neutral Units is drawn, ignore it, and draw a new Astrologers Proclaim or Event card.
     \item Players can use their Deck of Might \& Magic when paying gold to defend their faction Town.
     \item Ignore Combat encounters on the field with the Grail.
     \item Players may not Visit the field with the Grail token unless they have already Visited at least two Obelisks or the Grail token has been taken by any Hero at least once.
     \item To obtain the Grail token, a player’s Hero must spend 2 MPs on the field with the Grail.
-    \item If a player does not possess the title of “\textcolor{red}{Blood Knight},” they must Remove a faction Unit card from their Unit deck immediately after obtaining the Grail token. This effect can only occur once per player.
+    \item If a player does not possess the title of “\textcolor{darkcandyapplered}{Blood Knight},” they must Remove a faction Unit card from their Unit deck immediately after obtaining the Grail token. This effect can only occur once per player.
     \item If another Hero defeats the Hero with the Grail token, they also take the Grail token.
     \item If a Hero with the Grail token Surrenders, the Grail token is placed on the hex where the Hero Surrendered.
     \item If a Neutral army defeats the Hero with the Grail token, the Grail token is placed on the field where the Hero was defeated.
     \item If a Hero with the Grail token casts Town Portal or uses the Inferno faction Castle Gate building, the Grail token is placed on the hex where the spell was cast or the building used.
-    \item The Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: “$\infty$ Once during each Combat, if the Hero is a \textcolor{red}{Blood Knight}, discard a card to remove up to 2 Damage from your units and assign it to enemy units.”
+    \item The Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: “$\infty$ Once during each Combat, if the Hero is a \textcolor{darkcandyapplered}{Blood Knight}, discard a card to remove up to 2 \svg{damage} from your units and assign it to enemy units.”
     \item A Hero with the Grail token who possesses the title of “\textcolor{cyan}{Grail Knight}” may pay 10 \svg{gold} or 3 \svg{valuables} at any Temple map location to cleanse the Grail. Place a blue faction cube on the Grail token to mark this effect.
-    \item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: “$\infty$ Once during each Combat round, if the Hero is a \textcolor{cyan}{Grail Knight}, discard a card to remove up to 2 Damage from your units.”
+    \item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: “$\infty$ Once during each Combat round, if the Hero is a \textcolor{cyan}{Grail Knight}, discard a card to remove up to 2 \svg{damage} from your units.”
 \end{itemize}
 \subsection*{\MakeUppercase{Victory Condition}}
 To win the scenario, a Hero must obtain the Grail token and bring it to their faction Town.
@@ -104,13 +102,19 @@ To win the scenario, a Hero must obtain the Grail token and bring it to their fa
 If the Grail is not obtained at least once by the end of the 13th round, the game ends, and all players lose the scenario.
 If the Grail token has been obtained, the players gain additional time – until the end of the 16th round – to bring the Grail to their faction Town. Otherwise, all players lose the scenario.
 \subsection*{\MakeUppercase{Timed Event}}
-At the beginning of the 6th, 9th, and 12th rounds, remove all Black cubes from all Water Wheels and Windmills on the map. Additionally, all players possessing the title of “\textcolor{cyan}{Grail Knight}” gain 1 Positive Morale. Finally, any players who do not possess a title gain 2 Negative Morale.
+At the beginning of the 6th, 9th, and 12th rounds, remove all Black cubes from all Water Wheels and Windmills on the map. Additionally, all players possessing the title of “\textcolor{cyan}{Grail Knight}” gain \svg{morale_positive}. Finally, any players who do not possess a title gain 2 \svg{morale_negative}.
+\begin{tikzpicture}
+    \centering
+    \includegraphics[width=1\linewidth]{\_assets/maps/bloody-grail-2p.png}
+\end{tikzpicture}
 \end{multicols*}
-\begin{figure}
-    \includegraphics[width=0.6\paperwidth,left]{\_assets/maps/bloody-grail-2p.png}
-    \caption{2-PLAYER SCENARIO}
-\end{figure}
-\begin{figure}
-    \includegraphics[width=0.6\paperwidth,left]{\_assets/maps/bloody-grail-4p.png}
-    \caption{4-PLAYER SCENARIO}
-\end{figure}
+
+
+
+
+
+%\begin{minipage}{0.4\paperwidth}
+%\centering
+%\includegraphics[width=0.2\paperwidth]{\_assets/maps/bloody-grail-4p.png}
+%    \captionof{figure}{4-PLAYER SCENARIO}
+%\end{minipage}
