--- a/coops/Titans_stronghold.tex
+++ b/coops/Titans_stronghold.tex
@@ -8,13 +8,12 @@
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1219333721019256943}{Archon Studio Discord}
 
 \subsection*{\MakeUppercase{The story}}
-
-A long time ago, a powerful fortress was built to house the fantastic and murderous Titans. No one has ever entered and returned to tell the tale. Now, peoples speak about death of guardians and an incredibly lot of treasures, with potentially the best bow of the world. 
-
-If this legend of the empty fort is true, it's the time for excavation.
-
-But for now, you and your friends need to find the keys spread around Antagarich to open the gate of Titans' stronghold. 
-
+\textit{A long time ago, a powerful fortress was built to house the fantastic and murderous Titans.
+  No one has ever entered and returned to tell the tale.
+  Now, people speak about the death of guardians and an incredible amount of treasures, potentially including the best bow in the world.\\
+  If this legend of the empty fort is true, it's time for excavation.\\
+  But for now, you and your friends need to find the keys spread around Antagarich to open the gate of the Titans' stronghold.
+}
 \subsection*{\MakeUppercase{Scenario length}}
 
 This scenario plays out over 16 rounds. (15 in impossible)
