--- a/coops/Titans_stronghold.tex
+++ b/coops/Titans_stronghold.tex
@@ -16,7 +16,7 @@
 }
 \subsection*{\MakeUppercase{Scenario length}}
 
-This scenario plays out over 16 rounds. (15 in impossible)
+This scenario plays out over 16 rounds (15 in Impossible difficulty).
 
 \subsection*{\MakeUppercase{Player setup}}
 
