--- a/coops/Titans_stronghold.tex
+++ b/coops/Titans_stronghold.tex
@@ -30,7 +30,7 @@ This scenario plays out over 16 rounds (15 in Impossible difficulty).
     A Pack of \svg{bronze} units of your choice.
     A Few \svg{bronze} units of your choice.
 
-\textbf{Town Buildings:} nothing
+\textbf{Town Buildings:} None
 
 \subsection*{\MakeUppercase{Map setup}}
 
