--- a/coops/Titans_stronghold.tex
+++ b/coops/Titans_stronghold.tex
@@ -57,9 +57,9 @@ The center of this tile is the Titans' Stronghold.
 
 \subsection*{\MakeUppercase{Timed events}}
 
-\textbf{4$^{th}$, 8$^{th}$ and 12$^{th}$ Round:}
+\textbf{4$^{th}$, 8$^{th}$ and 12$^{th}$ Rounds:}
 \begin{itemize}
-    \item Remove black cubes from windmills, water wheels and mystical gardens.
+    \item Remove black cubes from Windmills, Water Wheels, and Mystical Gardens.
 \end{itemize}
 
 \end{multicols*}
