--- a/coops/Titans_stronghold.tex
+++ b/coops/Titans_stronghold.tex
@@ -20,7 +20,7 @@ This scenario plays out over 16 rounds (15 in Impossible difficulty).
 
 \subsection*{\MakeUppercase{Player setup}}
 
-\textbf{Player count:} 1 - 6
+\textbf{Player Count:} 1 - 6
 
 \textbf{Starting Resources:} 30 \svg{gold}, 8 \svg{building_materials}, 2 \svg{valuables}
 
