--- a/coops/Titans_stronghold.tex
+++ b/coops/Titans_stronghold.tex
@@ -34,7 +34,7 @@ This scenario plays out over 16 rounds (15 in Impossible difficulty).
 
 \subsection*{\MakeUppercase{Map setup}}
 
-Take the following Map tiles and set them up as shown in the scenario map layout: (P for number of player)
+Take the following Map Tiles and set them up as shown in the scenario map layout (P for the number of players):
 
 \textbf{(1*P) Starting Map tile (I)}
 \begin{itemize}
