--- a/coops/Titans_stronghold.tex
+++ b/coops/Titans_stronghold.tex
@@ -48,7 +48,7 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
 
 \textbf{(1*P) + 1 × Center Map tile (VI-VII)}
 
-If you don't have enough VI-VII tile you can use another for tile near to tile I.
+If you don't have enough VI-VII tiles, you can use another tile near to tile I.
 The center of this tile is the Titans' Stronghold.
 
 \subsection*{\MakeUppercase{Win conditions}}
