--- a/coops/Titans_stronghold.tex
+++ b/coops/Titans_stronghold.tex
@@ -55,7 +55,7 @@ The center of this tile is the Titans' Stronghold.
 
 \textbf{Win:} Kill all unit in the Titans' Stronghold (the center of tile VI-VII next to the tiles I)
 
-\subsection*{\MakeUppercase{Timed events}}
+\subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{4$^{th}$, 8$^{th}$ and 12$^{th}$ Rounds:}
 \begin{itemize}
